--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,7 @@
   </script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.72.2/dist/L.Control.Locate.min.js" charset="utf-8"></script>
     <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js" charset="utf-8"></script>
+    <script src="js/antpath.js" charset="utf-8"></script>
 </head>
 
 <body style="padding:0; margin:0">
