--- a/static/active.html
+++ b/static/active.html
@@ -100,7 +100,7 @@
                 row.appendChild(vehicleIdCell);
 
                 if (properties.vehicleId) {
-                    row.style.backgroundColor = 'lightgreen';
+                    vehicleIdCell.style.backgroundColor = 'lightgreen';
                 }
     
                 vehicleTable.appendChild(row);
