--- a/static/active.html
+++ b/static/active.html
@@ -99,7 +99,7 @@
                 vehicleIdCell.textContent = properties.vehicleId;
                 row.appendChild(vehicleIdCell);
 
-                if (properties.vehicleId) {
+                if (properties.realTime) {
                     vehicleIdCell.style.backgroundColor = 'lightgreen';
                 }
     
