--- a/static/main.html
+++ b/static/main.html
@@ -28,6 +28,9 @@
              <li>
                 <a href="vehicle_history.html">Povijesni pregled po vozilu</a>
              </li>
+             <li>
+                <a href="history_per_line.html">Povijesni pregled po linijama</a>
+             </li>
         </ul>
      </div>
 </body>
