--- a/static/history_per_line.html
+++ b/static/history_per_line.html
@@ -33,6 +33,8 @@
 <body>
 
   <h1>Povijesni pregled po linijama</h1>
+  Podaci nisu nužno točni, tako da se ne preporučuje korištenje ovih podataka za analize i/ili donošenje odluka ili zaključaka. Upotreba je isključivo u informativne svrhe.
+  <hr>
   <label for="routeSelect">Linija:</label>
   <select id="routeSelect">
     <option value="">Odaberi liniju</option>
