--- a/static/main.html
+++ b/static/main.html
@@ -23,6 +23,9 @@
              </li>
              <hr/>
              <li>
+               <a href="vehicle_list.html">Prikaz liste vozila</a>
+             </li>
+             <li>
                 <a href="historical.html">Prikaz povijesnih podataka</a> - pregled rasporeda vozila na vozne redove
              </li>
              <li>
