--- a/static/index.html
+++ b/static/index.html
@@ -42,6 +42,7 @@
   <script src="
 https://cdn.jsdelivr.net/npm/luxon@3.6.1/build/global/luxon.min.js
 "></script>
+  <script defer data-domain="zet.prometko.cyou" src="https://analitika.derp.si/js/script.js"></script>
 </head>
 
 <body style="padding:0; margin:0">
