--- a/static/index.html
+++ b/static/index.html
@@ -135,6 +135,7 @@
 <!-- Scripts -->
 <script src="js/zetko_router.js"></script>
 <script src="js/zetko_map.js"></script>
+<script src="js/zetko_route.js"></script>
 <script src="js/zetko_stop.js"></script>
 <script src="js/zetko_trip.js"></script>
 
