--- a/static/index.html
+++ b/static/index.html
@@ -8,23 +8,19 @@
   <meta name="author" content="TrackerkoProject">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
-    integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.0.0/dist/full.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" />
   <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/luxon@3.6.1/build/global/luxon.min.js"></script>
   <style>
-    html,
-    body {
+    html, body {
       margin: 0;
       padding: 0;
       height: 100%;
     }
-
     #map {
       position: absolute;
       top: 0;
@@ -32,11 +28,12 @@
       width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
       height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
     }
-
+    body.info-panel-open #map {
+      height: calc(50vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
+    }
     @media screen and (min-width: 768px) {
       #info-panel {
         top: 6rem;
-        /* below search box */
         left: 1rem;
         right: auto;
         width: 340px;
@@ -45,98 +42,135 @@
         border-top: none;
         border-right: 1px solid #ccc;
       }
+      body.info-panel-open #map {
+        height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
+      }
     }
-    .scroll-strip::-webkit-scrollbar {
-  height: 6px;
-}
-
-.scroll-strip::-webkit-scrollbar-thumb {
-  background: #ccc;
-  border-radius: 3px;
-}
-
-.scroll-strip:hover::-webkit-scrollbar-thumb {
-  background: #999;
-}
-@keyframes blinker {
-  50% {
-    opacity: 0;
-  }
-}
-.blinker {
-  animation: blinker 1.5s linear infinite;
-  color: green;
-}
-
+    .scroll-strip::-webkit-scrollbar { height: 6px; }
+    .scroll-strip::-webkit-scrollbar-thumb { background: #ccc; border-radius: 3px; }
+    .scroll-strip:hover::-webkit-scrollbar-thumb { background: #999; }
+    @keyframes blinker { 50% { opacity: 0; } }
+    .blinker { animation: blinker 1.5s linear infinite; color: green; }
   </style>
 </head>
-
 <body class="font-sans bg-base-100">
   <div id="map"></div>
-  <div class="absolute top-4 left-4 right-[3rem] md:left-4 md:right-auto w-auto max-w-md z-50"
-    style="pointer-events:none;">
-    <div class="flex gap-2 pointer-events-auto">
+  <!-- Search Bar -->
+<div class="absolute top-4 left-4 z-50 w-full md:w-[340px] max-w-full pointer-events-none">
+  <div class="relative pointer-events-auto">
+    <div class="flex gap-2">
       <button id="menu-btn" class="btn btn-primary"><i class="bi bi-list"></i></button>
       <input id="search-input" type="text" placeholder="Pretraži..." class="input input-bordered w-full md:w-auto" />
     </div>
     <div id="search-results"
-      class="mt-2 max-h-60 overflow-y-auto bg-base-200 rounded-box shadow p-2 hidden pointer-events-auto"></div>
+         class="absolute top-full left-0 mt-1 w-full z-[100] bg-base-200 rounded-box shadow max-h-60 overflow-y-auto hidden">
+    </div>
   </div>
-  <!-- Responsive Details Panel -->
-<div id="info-panel"
-  class="fixed z-50 overflow-y-auto shadow-2xl p-4 rounded-t-2xl border-t border-gray-300
+</div>
+  <!-- Info Panel -->
+  <div id="info-panel"
+    class="fixed z-50 overflow-y-auto shadow-2xl p-4 rounded-t-2xl border-t border-gray-300
       w-full min-h-[50vh] max-h-[50vh] bottom-0 left-0 right-0 hidden
       md:w-[340px] md:top-[6rem] md:left-4 md:bottom-auto md:right-auto md:rounded-2xl md:border-t-0 md:border-r
       bg-base-100 dark:bg-base-200">
-      <button class="btn btn-sm btn-circle absolute top-4 right-4 z-10" onclick="closeInfoPanel()" style="pointer-events:auto;">✕</button>
-
-  <div id="info-panel-content" class="mt-2 space-y-4 text-sm leading-relaxed"></div>
-</div>
+    <button class="btn btn-sm btn-circle absolute top-4 right-4 z-10" onclick="closeInfoPanel()" style="pointer-events:auto;">✕</button>
+    <div id="info-panel-content" class="mt-2 space-y-4 text-sm leading-relaxed"></div>
+  </div>
+  <!-- Sidebar -->
   <div id="sidebar"
     class="fixed top-0 left-0 w-80 max-w-full h-full bg-base-100 shadow-lg z-50 p-4 hidden overflow-y-auto">
-    <button class="btn btn-sm btn-circle absolute top-4 right-4"
-      onclick="document.getElementById('sidebar').classList.add('hidden')">X</button>
+    <button class="btn btn-sm btn-circle absolute top-4 right-4" onclick="document.getElementById('sidebar').classList.add('hidden')">X</button>
     <h1 class="text-xl font-bold mb-4">ZETko</h1>
     <hr />
     <div class="flex flex-col gap-2 mb-4 pt-4">
       <a href="main.html" class="btn btn-primary w-full mb-2">Povijesni podaci</a>
     </div>
     <div class="absolute bottom-4 left-4 right-4 w-auto">
-      <!-- main.html -->
       <p class="text-sm mb-2">
-        Problemi ili prijedlozi? Prijavite ih na <a href="https://github.com/vekejsn/zetRt/issues" target="_blank"
-          class="link">GitHub-u</a>.<br>
-        &copy; <a href="https://www.openstreetmap.org/copyright" target="_blank" class="link">OpenStreetMap
-          suradnici</a><br>
+        Problemi ili prijedlozi? Prijavite ih na <a href="https://github.com/vekejsn/zetRt/issues" target="_blank" class="link">GitHub-u</a>.<br>
+        &copy; <a href="https://www.openstreetmap.org/copyright" target="_blank" class="link">OpenStreetMap suradnici</a><br>
       </p>
     </div>
   </div>
-
   <script>
-
-
     document.getElementById('menu-btn').addEventListener('click', () => {
       document.getElementById('sidebar').classList.toggle('hidden');
     });
-
+    function prepareStringForSearchComparison(str) {
+      // Replace šđčćž with sdccz, remove whitespace, and convert to lowercase
+      return str.toLowerCase()
+        .replace(/š/g, 's')
+        .replace(/đ/g, 'd')
+        .replace(/č/g, 'c')
+        .replace(/ć/g, 'c')
+        .replace(/ž/g, 'z')
+        .replace(/\s+/g, '');
+    }
+    let searchDebounceTimeout;
     document.getElementById('search-input').addEventListener('input', (e) => {
-      const val = e.target.value.trim();
-      const resBox = document.getElementById('search-results');
-      if (val.length > 1) {
-        resBox.innerHTML = `<div class='p-2'>Searching for "${val}"...</div>`;
-        resBox.classList.remove('hidden');
-      } else {
-        resBox.classList.add('hidden');
-      }
+      e.preventDefault();
+      clearTimeout(searchDebounceTimeout);
+      searchDebounceTimeout = setTimeout(() => {
+        const val = e.target.value.trim();
+        const resBox = document.getElementById('search-results');
+        if (val.length > 1) {
+          resBox.classList.remove('hidden');
+          closeInfoPanel();
+        } else {
+          resBox.innerHTML = '';
+          resBox.classList.add('hidden');
+        }
+        console.log('Searching for:', val);
+        const stopSource = map?.getSource('stops')._data;
+        if (stopSource) {
+          const stops = stopSource.features.filter(f => prepareStringForSearchComparison(f.properties.name).includes(prepareStringForSearchComparison(val)) ||
+           f.properties.id == val);
+          if (stops.length > 0) {
+            resBox.innerHTML = stops.map(f => `
+          <div class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-100 transition cursor-pointer bg-white"
+           onclick='location.hash = "#stop/" + "${f.properties.id}"'>
+            <span class="inline-flex items-center justify-center w-8 h-8 rounded-full bg-blue-200 text-blue-700">
+          <i class="bi bi-geo-alt-fill"></i>
+            </span>
+            <span class="font-medium text-base">${f.properties.name}</span>
+            <span class="text-xs text-gray-500">${f.properties.id}</span>
+          </div>
+            `).join('');
+            resBox.classList.remove('hidden');
+          }
+        }
+        const vehicleSource = map?.getSource('vehicles')._data;
+        if (vehicleSource) {
+          const vehicles = vehicleSource.features.filter(f => prepareStringForSearchComparison(f.properties.vehicleId).includes(prepareStringForSearchComparison(val)));
+          if (vehicles.length > 0) {
+            resBox.innerHTML += vehicles.map(f => `
+          <div class="flex items-center gap-3 p-3 rounded-lg hover:bg-green-100 transition cursor-pointer bg-white"
+           onclick='location.hash = "#trip/" + "${f.properties.tripId}"'>
+            <span class="inline-flex items-center justify-center w-8 h-8 rounded-full bg-green-200 text-green-700">
+          <i class="bi bi-bus-front-fill"></i>
+            </span>
+            <div class="flex flex-row">
+          <span class="font-medium text-base">${f.properties.vehicleId}</span>
+          <span>
+            <span class="ml-2 badge badge-primary" style="color: white; background-color: #1264AB; font-weight: bold;">
+          ${f.properties.routeShortName}
+            </span>
+          <span class="text-xs text-gray-500">→ ${f.properties.tripHeadsign}</span>
+          </span>
+            </div>
+          </div>
+            `).join('');
+            resBox.classList.remove('hidden');
+          }
+        }
+      }, 125);
     });
-
   </script>
+  <!-- Scripts -->
+  <script src="js/zetko_router.js"></script>
+  <script src="js/zetko_map.js"></script>
+  <script src="js/zetko_route.js"></script>
+  <script src="js/zetko_stop.js"></script>
+  <script src="js/zetko_trip.js"></script>
 </body>
-<!-- Scripts -->
-<script src="js/zetko_router.js"></script>
-<script src="js/zetko_map.js"></script>
-<script src="js/zetko_route.js"></script>
-<script src="js/zetko_stop.js"></script>
-<script src="js/zetko_trip.js"></script>
-
 </html>
