--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" />
   <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/luxon@3.6.1/build/global/luxon.min.js"></script>
+  <script defer data-domain="zet.prometko.cyou" src="https://analitika.derp.si/js/script.js"></script>
   <style>
     html, body {
       margin: 0;
