--- a/static/index.html
+++ b/static/index.html
@@ -73,7 +73,7 @@
 </div>
   <!-- Info Panel -->
   <div id="info-panel"
-    class="fixed z-50 overflow-y-auto shadow-2xl p-4 rounded-t-2xl border-t border-gray-300
+    class="fixed z-50 shadow-2xl p-4 rounded-t-2xl border-t border-gray-300
       w-full min-h-[50vh] max-h-[50vh] bottom-0 left-0 right-0 hidden
       md:w-[340px] md:top-[6rem] md:left-4 md:bottom-auto md:right-auto md:rounded-2xl md:border-t-0 md:border-r
       bg-base-100 dark:bg-base-200">
