--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="hr" data-theme="light">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,20 +9,41 @@
   <meta name="author" content="TrackerkoProject">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+    integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.0.0/dist/full.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.css" />
   <script src="https://unpkg.com/maplibre-gl@2.4.0/dist/maplibre-gl.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/luxon@3.6.1/build/global/luxon.min.js"></script>
   <script defer data-domain="zet.prometko.cyou" src="https://analitika.derp.si/js/script.js"></script>
+  <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/images/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/images/ms-icon-144x144.png">
+  <meta name="theme-color" content="#3070A1">
   <style>
-    html, body {
+    html,
+    body {
       margin: 0;
       padding: 0;
       height: 100%;
     }
+
     #map {
       position: absolute;
       top: 0;
@@ -29,12 +51,15 @@
       width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
       height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
     }
+
     body.info-panel-open #map {
       height: calc(50vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
     }
+
     #search-div {
       max-width: 80%;
     }
+
     @media screen and (min-width: 768px) {
       #info-panel {
         top: 6rem;
@@ -46,44 +71,66 @@
         border-top: none;
         border-right: 1px solid #ccc;
       }
+
       body.info-panel-open #map {
         height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
       }
     }
-    .scroll-strip::-webkit-scrollbar { height: 6px; }
-    .scroll-strip::-webkit-scrollbar-thumb { background: #ccc; border-radius: 3px; }
-    .scroll-strip:hover::-webkit-scrollbar-thumb { background: #999; }
-    @keyframes blinker { 50% { opacity: 0; } }
-    .blinker { animation: blinker 1.5s linear infinite; color: green; }
+
+    .scroll-strip::-webkit-scrollbar {
+      height: 6px;
+    }
+
+    .scroll-strip::-webkit-scrollbar-thumb {
+      background: #ccc;
+      border-radius: 3px;
+    }
+
+    .scroll-strip:hover::-webkit-scrollbar-thumb {
+      background: #999;
+    }
+
+    @keyframes blinker {
+      50% {
+        opacity: 0;
+      }
+    }
+
+    .blinker {
+      animation: blinker 1.5s linear infinite;
+      color: green;
+    }
   </style>
 </head>
+
 <body class="font-sans bg-base-100">
   <div id="map"></div>
   <!-- Search Bar -->
-<div class="absolute top-4 left-4 z-50 w-full md:w-[340px] max-w-full pointer-events-none" id="search-div">
-  <div class="relative pointer-events-auto">
-    <div class="flex gap-2">
-      <button id="menu-btn" class="btn btn-primary"><i class="bi bi-list"></i></button>
-      <input id="search-input" type="text" placeholder="Pretraži..." class="input input-bordered w-full md:w-auto" />
-    </div>
-    <div id="search-results"
-         class="absolute top-full left-0 mt-1 w-full z-[100] bg-base-200 rounded-box shadow max-h-60 overflow-y-auto hidden">
+  <div class="absolute top-4 left-4 z-50 w-full md:w-[340px] max-w-full pointer-events-none" id="search-div">
+    <div class="relative pointer-events-auto">
+      <div class="flex gap-2">
+        <button id="menu-btn" class="btn btn-primary"><i class="bi bi-list"></i></button>
+        <input id="search-input" type="text" placeholder="Pretraži..." class="input input-bordered w-full md:w-auto" />
+      </div>
+      <div id="search-results"
+        class="absolute top-full left-0 mt-1 w-full z-[100] bg-base-200 rounded-box shadow max-h-60 overflow-y-auto hidden">
+      </div>
     </div>
   </div>
-</div>
   <!-- Info Panel -->
-  <div id="info-panel"
-    class="fixed z-50 shadow-2xl p-4 rounded-t-2xl border-t border-gray-300
+  <div id="info-panel" class="fixed z-50 shadow-2xl p-4 rounded-t-2xl border-t border-gray-300
       w-full min-h-[50vh] max-h-[50vh] bottom-0 left-0 right-0 hidden
       md:w-[340px] md:top-[6rem] md:left-4 md:bottom-auto md:right-auto md:rounded-2xl md:border-t-0 md:border-r
       bg-base-100 dark:bg-base-200">
-    <button class="btn btn-sm btn-circle absolute top-4 right-4 z-10" onclick="closeInfoPanel()" style="pointer-events:auto;">✕</button>
+    <button class="btn btn-sm btn-circle absolute top-4 right-4 z-10" onclick="closeInfoPanel()"
+      style="pointer-events:auto;">✕</button>
     <div id="info-panel-content" class="mt-2 space-y-4 text-sm leading-relaxed"></div>
   </div>
   <!-- Sidebar -->
   <div id="sidebar"
     class="fixed top-0 left-0 w-80 max-w-full h-full bg-base-100 shadow-lg z-50 p-4 hidden overflow-y-auto">
-    <button class="btn btn-sm btn-circle absolute top-4 right-4" onclick="document.getElementById('sidebar').classList.add('hidden')">X</button>
+    <button class="btn btn-sm btn-circle absolute top-4 right-4"
+      onclick="document.getElementById('sidebar').classList.add('hidden')">X</button>
     <h1 class="text-xl font-bold mb-4">ZETko</h1>
     <hr />
     <div class="flex flex-col gap-2 mb-4 pt-4">
@@ -91,8 +138,10 @@
     </div>
     <div class="absolute bottom-4 left-4 right-4 w-auto">
       <p class="text-sm mb-2">
-        Problemi ili prijedlozi? Prijavite ih na <a href="https://github.com/vekejsn/zetRt/issues" target="_blank" class="link">GitHub-u</a>.<br>
-        &copy; <a href="https://www.openstreetmap.org/copyright" target="_blank" class="link">OpenStreetMap suradnici</a><br>
+        Problemi ili prijedlozi? Prijavite ih na <a href="https://github.com/vekejsn/zetRt/issues" target="_blank"
+          class="link">GitHub-u</a>.<br>
+        &copy; <a href="https://www.openstreetmap.org/copyright" target="_blank" class="link">OpenStreetMap
+          suradnici</a><br>
       </p>
     </div>
   </div>
@@ -128,7 +177,7 @@
         const stopSource = map?.getSource('stops')._data;
         if (stopSource) {
           const stops = stopSource.features.filter(f => prepareStringForSearchComparison(f.properties.name).includes(prepareStringForSearchComparison(val)) ||
-           f.properties.id == val);
+            f.properties.id == val);
           if (stops.length > 0) {
             resBox.innerHTML = stops.map(f => `
           <div class="flex items-center gap-3 p-3 rounded-lg hover:bg-blue-100 transition cursor-pointer bg-white"
@@ -184,7 +233,7 @@
           </div>
             `).join('');
             resBox.classList.remove('hidden');
-        }
+          }
         }
       }, 125);
     });
@@ -195,5 +244,20 @@
   <script src="js/zetko_route.js"></script>
   <script src="js/zetko_stop.js"></script>
   <script src="js/zetko_trip.js"></script>
+  <!-- PWA -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('/js/sw.js')
+          .then(registration => {
+            console.log('Service Worker registered with scope:', registration.scope);
+          })
+          .catch(error => {
+            console.error('Service Worker registration failed:', error);
+          });
+      });
+    }
+  </script>
 </body>
+
 </html>
